--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,28 @@
-# Файлы и папки операционной системы
-.DS_Store
-Thumbs.db
+# Зависимости
+/node_modules
+/.pnp
+.pnp.js
 
-# Файлы редактора
+# Тестирование
+/coverage
+
+# Редакторы кода
 .idea
 *.sublime*
 .vscode
 
-# Вспомогательные файлы
-*.log*
-node_modules/
+# Сборка
+/build
+
+# Разное
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
 .history/
