--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@types/node": "12.12.27",
     "@types/react": "16.9.19",
     "@types/react-dom": "16.9.5",
-    "@types/react-router-dom": "^5.1.3",
+    "@types/react-router-dom": "5.1.3",
     "node-sass": "4.13.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
@@ -23,12 +23,17 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "pretty-quick": "pretty-quick"
+    "lint": "tsc --noEmit && eslint '*/**/*.{js,jsx,ts,tsx}' --quiet --fix"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "pretty-quick --staged"
+      "pre-commit": "tsc --noEmit && lint-staged"
     }
+  },
+  "lint-staged": {
+    "*/**/*.{js,jsx,ts,tsx}": [
+      "eslint --fix --max-warnings=0"
+    ]
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -46,8 +51,14 @@
     ]
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "2.21.0",
+    "@typescript-eslint/parser": "2.21.0",
+    "eslint-config-prettier": "6.10.0",
+    "eslint-plugin-import": "2.20.1",
+    "eslint-plugin-prettier": "3.1.2",
+    "eslint-plugin-react": "7.18.3",
     "husky": "4.2.3",
-    "prettier": "1.19.1",
-    "pretty-quick": "2.0.1"
+    "lint-staged": "10.0.8",
+    "prettier": "1.19.1"
   }
 }
