--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -11,12 +11,10 @@ pipelines:
         caches:
           - node
         script:
-          - pipe: atlassian/aws-code-deploy:0.5.0
+          - pipe: atlassian/aws-s3-deploy:0.4.1
             variables:
-              AWS_DEFAULT_REGION: 'ap-southeast-2'
               AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
               AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
-              COMMAND: 'deploy'
-              APPLICATION_NAME: 'my-application'
-              DEPLOYMENT_GROUP: 'my-deployment-group'
-              WAIT: 'true'
+              AWS_DEFAULT_REGION: 'us-east-1'
+              S3_BUCKET: 'my-bucket-name'
+              LOCAL_PATH: 'build'
