--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -11,10 +11,11 @@ pipelines:
         caches:
           - node
         script:
-          - pipe: atlassian/aws-s3-deploy:0.4.1
+          - pipe: atlassian/aws-code-deploy:0.5.0
             variables:
+              AWS_DEFAULT_REGION: 'ap-southeast-2'
               AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
               AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
-              AWS_DEFAULT_REGION: 'us-east-1'
-              S3_BUCKET: 'my-bucket-name'
-              LOCAL_PATH: 'build'
+              COMMAND: 'upload'
+              APPLICATION_NAME: 'my-application'
+              ZIP_FILE: 'teams-ui.zip'
