--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -11,11 +11,7 @@ pipelines:
         caches:
           - node
         script:
-          - pipe: atlassian/aws-code-deploy:0.5.0
+          - pipe: atlassian/google-app-engine-deploy:0.6.1
             variables:
-              AWS_DEFAULT_REGION: 'ap-southeast-2'
-              AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
-              AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
-              COMMAND: 'upload'
-              APPLICATION_NAME: 'my-application'
-              ZIP_FILE: 'teams-ui.zip'
+              KEY_FILE: $KEY_FILE
+              PROJECT: 'my-project'
