--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "@testing-library/jest-dom": "4.2.4",
     "@testing-library/react": "9.4.0",
     "@testing-library/user-event": "7.2.1",
+    "@types/classnames": "^2.2.10",
     "@types/jest": "24.9.1",
     "@types/node": "12.12.27",
     "@types/react": "16.9.19",
     "@types/react-dom": "16.9.5",
     "@types/react-router-dom": "5.1.3",
+    "classnames": "2.2.6",
     "node-sass": "4.13.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
