--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,42 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "ES2020",
     "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
+      "ES5",
+      "ES6",
+      "ES7",
+      "ES2017",
+      "ES2018",
+      "ESNext",
+      "DOM",
+      "DOM.Iterable",
+      "ScriptHost"
     ],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
+    "moduleResolution": "Node",
     "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "jsx": "preserve",
+    "typeRoots": [
+      "./node_modules/@types"
+    ],
+    "allowSyntheticDefaultImports": true,
+    "skipLibCheck": true,
+    "allowJs": true,
+    "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "module": "esnext",
-    "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react"
+    "noEmit": true
   },
+  "exclude": [
+    "./node_modules",
+    "./node_modules/@types/node",
+    "./public",
+    "./build"
+  ],
   "include": [
-    "src"
+    "./src/**/*"
   ]
 }
