--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "13.13.32",
     "@types/react": "16.14.1",
     "@types/react-dom": "16.9.10",
+    "@types/react-router-dom": "5.1.6",
     "@types/webpack": "4.41.25",
     "@types/webpack-dev-server": "3.11.1",
     "@typescript-eslint/eslint-plugin": "4.8.1",
@@ -37,6 +38,7 @@
   },
   "dependencies": {
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-router-dom": "5.2.0"
   }
 }
