--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint:fix": "eslint './src/**/*.{ts,tsx}' --fix"
   },
   "devDependencies": {
+    "@types/classnames": "2.2.11",
     "@types/node": "13.13.32",
     "@types/react": "16.14.1",
     "@types/react-dom": "16.9.10",
@@ -19,24 +20,31 @@
     "@types/webpack-dev-server": "3.11.1",
     "@typescript-eslint/eslint-plugin": "4.8.1",
     "@typescript-eslint/parser": "4.8.1",
+    "css-loader": "1.0.1",
     "eslint": "7.14.0",
     "eslint-config-prettier": "6.15.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-prettier": "3.1.4",
     "eslint-plugin-react": "7.21.5",
     "eslint-plugin-react-hooks": "4.2.0",
+    "file-loader": "6.2.0",
     "fork-ts-checker-webpack-plugin": "5.2.1",
     "html-webpack-plugin": "4.5.0",
     "prettier": "2.2.0",
+    "sass-loader": "10.1.0",
+    "style-loader": "2.0.0",
     "ts-loader": "8.0.11",
     "ts-node": "9.0.0",
     "tsconfig-paths-webpack-plugin": "3.3.0",
     "typescript": "4.1.2",
+    "typings-for-css-modules-loader": "1.7.0",
     "webpack": "4.44.2",
     "webpack-cli": "3.3.12",
     "webpack-dev-server": "3.11.0"
   },
   "dependencies": {
+    "classnames": "2.2.6",
+    "node-sass": "4.14.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-router-dom": "5.2.0"
