--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "fork-ts-checker-webpack-plugin": "5.2.1",
     "html-webpack-plugin": "4.5.0",
     "prettier": "2.2.0",
+    "redux-logger": "^3.0.6",
     "ts-loader": "8.0.11",
     "ts-node": "9.0.0",
     "tsconfig-paths-webpack-plugin": "3.3.0",
@@ -37,6 +38,10 @@
   },
   "dependencies": {
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0"
   }
 }
