--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "prettier": "2.2.0",
     "sass-loader": "10.1.0",
     "style-loader": "2.0.0",
+    "redux-logger": "^3.0.6",
     "ts-loader": "8.0.11",
     "ts-node": "9.0.0",
     "tsconfig-paths-webpack-plugin": "3.3.0",
@@ -47,6 +48,10 @@
     "node-sass": "4.14.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-router-dom": "5.2.0"
+    "react-router-dom": "5.2.0",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0"
   }
 }
