--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "prettier": "2.2.0",
     "sass-loader": "10.1.0",
     "style-loader": "2.0.0",
-    "redux-logger": "^3.0.6",
+    "redux-devtools-extension": "2.13.8",
+    "redux-logger": "3.0.6",
     "ts-loader": "8.0.11",
     "ts-node": "9.0.0",
     "tsconfig-paths-webpack-plugin": "3.3.0",
