--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "13.13.32",
     "@types/react": "16.14.1",
     "@types/react-dom": "16.9.10",
+    "@types/redux-logger": "g3.0.8",
     "@types/webpack": "4.41.25",
     "@types/webpack-dev-server": "3.11.1",
     "@typescript-eslint/eslint-plugin": "4.8.1",
@@ -38,7 +39,6 @@
     "webpack-dev-server": "3.11.0"
   },
   "dependencies": {
-    "@types/redux-logger": "^3.0.8",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-redux": "7.2.2",
