--- a/package.json
+++ b/package.json
@@ -15,11 +15,8 @@
     "@types/node": "13.13.32",
     "@types/react": "16.14.1",
     "@types/react-dom": "16.9.10",
-<<<<<<< HEAD
     "@types/react-router-dom": "5.1.6",
-=======
-    "@types/redux-logger": "g3.0.8",
->>>>>>> added logger in devDep
+    "@types/redux-logger": "3.0.8",
     "@types/webpack": "4.41.25",
     "@types/webpack-dev-server": "3.11.1",
     "@typescript-eslint/eslint-plugin": "4.8.1",
