--- a/package.json
+++ b/package.json
@@ -46,8 +46,9 @@
     "webpack-dev-server": "3.11.0"
   },
   "dependencies": {
-    "axios": "^0.21.0",
+    "axios": "0.21.0",
     "classnames": "2.2.6",
+    "js-cookie": "2.2.1",
     "node-sass": "4.14.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
