--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
   },
   "devDependencies": {
     "@types/classnames": "2.2.11",
+    "@types/js-cookie": "2.2.6",
     "@types/node": "13.13.32",
     "@types/react": "16.14.1",
     "@types/react-dom": "16.9.10",
-    "@types/react-redux": "^7.1.14",
+    "@types/react-redux": "7.1.14",
     "@types/react-router-dom": "5.1.6",
-    "@types/redux-form": "^8.3.1",
+    "@types/redux-form": "8.3.1",
     "@types/redux-logger": "3.0.8",
     "@types/webpack": "4.41.25",
     "@types/webpack-dev-server": "3.11.1",
@@ -34,10 +35,10 @@
     "fork-ts-checker-webpack-plugin": "5.2.1",
     "html-webpack-plugin": "4.5.0",
     "prettier": "2.2.0",
-    "sass-loader": "10.1.0",
-    "style-loader": "2.0.0",
     "redux-devtools-extension": "2.13.8",
     "redux-logger": "3.0.6",
+    "sass-loader": "10.1.0",
+    "style-loader": "2.0.0",
     "ts-loader": "8.0.11",
     "ts-node": "9.0.0",
     "tsconfig-paths-webpack-plugin": "3.3.0",
@@ -49,22 +50,22 @@
   },
   "dependencies": {
     "@hookform/resolvers": "1.2.0",
-    "date-fns": "^2.16.1",
+    "@types/redux-logger": "3.0.8",
     "axios": "0.21.0",
     "classnames": "2.2.6",
+    "date-fns": "2.16.1",
     "js-cookie": "2.2.1",
     "node-sass": "4.14.1",
-    "@types/redux-logger": "^3.0.8",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-hook-form": "6.13.1",
     "react-redux": "7.2.2",
-    "redux-form": "^8.3.7",
-    "string-mask": "^0.3.0",
-    "yup": "0.32.8",
     "react-router-dom": "5.2.0",
     "redux": "4.0.5",
+    "redux-form": "8.3.7",
     "redux-thunk": "2.3.0",
-    "reselect": "4.0.0"
+    "reselect": "4.0.0",
+    "string-mask": "0.3.0",
+    "yup": "0.32.8"
   }
 }
