--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "start": "webpack-dev-server --mode development --env.development --open --hot",
     "build": "webpack --mode production --env.production --progress",
-    "lint": "eslint './src/**/*.{ts,tsx}'",
-    "lint:fix": "eslint './src/**/*.{ts,tsx}' --fix"
+    "lint": "eslint ./src/**/*.{ts,tsx}",
+    "lint:fix": "eslint ./src/**/*.{ts,tsx} --fix"
   },
   "devDependencies": {
     "@types/classnames": "2.2.11",
@@ -22,8 +22,9 @@
     "@typescript-eslint/eslint-plugin": "4.8.1",
     "@typescript-eslint/parser": "4.8.1",
     "css-loader": "1.0.1",
-    "eslint": "7.14.0",
+    "eslint": "^7.18.0",
     "eslint-config-prettier": "6.15.0",
+    "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-prettier": "3.1.4",
     "eslint-plugin-react": "7.21.5",
