--- a/package.json
+++ b/package.json
@@ -10,6 +10,17 @@
     "lint": "eslint './src/**/*.{ts,tsx}'",
     "lint:fix": "eslint './src/**/*.{ts,tsx}' --fix"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "npm run lint:fix",
+      "git add"
+    ]
+  },
   "devDependencies": {
     "@types/classnames": "2.2.11",
     "@types/js-cookie": "2.2.6",
@@ -34,6 +45,8 @@
     "file-loader": "6.2.0",
     "fork-ts-checker-webpack-plugin": "5.2.1",
     "html-webpack-plugin": "4.5.0",
+    "husky": "^4.3.8",
+    "lint-staged": "^10.5.3",
     "prettier": "2.2.0",
     "redux-devtools-extension": "2.13.8",
     "redux-logger": "3.0.6",
