--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "@types/classnames": "2.2.11",
     "@types/js-cookie": "2.2.6",
     "@types/node": "13.13.32",
+    "@types/pdfmake": "0.1.16",
     "@types/react": "16.14.1",
     "@types/react-dom": "16.9.10",
     "@types/react-redux": "7.1.14",
     "@types/react-router-dom": "5.1.6",
+    "@types/react-table": "7.0.28",
     "@types/redux-form": "8.3.1",
     "@types/redux-logger": "3.0.8",
     "@types/webpack": "4.41.25",
@@ -69,11 +71,13 @@
     "date-fns": "2.16.1",
     "js-cookie": "2.2.1",
     "node-sass": "4.14.1",
+    "pdfmake": "0.1.70",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-hook-form": "6.13.1",
     "react-redux": "7.2.2",
     "react-router-dom": "5.2.0",
+    "react-table": "7.6.3",
     "redux": "4.0.5",
     "redux-form": "8.3.7",
     "redux-thunk": "2.3.0",
